// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllUrlsFromDocsConfig uploadcare gets all urls from docs config 1`] = `
[
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/intro",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/start/quickstart",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/security",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/introduction/billing",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/uploads",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/uploading-files",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/file-uploader",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/uploading/file-uploader/file-uploader",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/optimization",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/optimization/image-optimization",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/image-transformations",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/image-transformations/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/delivery",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/delivery/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/file-management",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/file-management/overview",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations/all-integrations",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations/api-clients",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/docs/integrations/api-clients/python",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/base-upload",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-start",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-part",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/multipart-file-upload-complete",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/from-url-upload",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/from-url-upload-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/upload/file-upload-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/groups",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/groups/create-files-group",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/upload-api/groups/files-group-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/store-file",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/delete-file-storage",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-storing",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/files-delete",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/create-local-copy",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file/create-remote-copy",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/aws-rekognition-detect-moderation-labels-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/uc-clamav-virus-scan-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/remove-bg-execute",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/add-ons/remove-bg-execution-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/update-file-metadata-key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/file-metadata/delete-file-metadata-key",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/groups-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/group/delete-group",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/project",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/project/info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/webhooks-list",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/create",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/update-webhook",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/webhook/unsubscribe",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert-info",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/document-convert-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/video-convert",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/rest-api-v-0-7/conversion/video-convert-status",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-information",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-information/file-info-json",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-information/file-info-jsonp",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-names",
  "uploadcare-preview-79798ef5-07dc-4ff0-928d-24b4c93ccd4d.docs.buildwithfern.com/api/url-api/file-names/file-with-name",
]
`;

exports[`getNavigationRoot uploadcare gets navigation root for api/url-api 1`] = `
{
  "redirect": "/api/url-api/file-information",
  "type": "redirect",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs 1`] = `
{
  "redirect": "/docs/introduction",
  "type": "redirect",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs/file-management 1`] = `
{
  "redirect": "/docs/file-management/overview",
  "type": "redirect",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs/file-management/overview 1`] = `
{
  "found": {
    "currentTabIndex": 0,
    "currentVersionIndex": -1,
    "sidebarNodes": [
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/index.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "intro",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "intro",
              },
              {
                "description": undefined,
                "id": "pages/start/quickstart.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "start",
                  "quickstart",
                ],
                "title": "Quick start",
                "type": "page",
                "urlSlug": "start/quickstart",
              },
              {
                "description": undefined,
                "id": "pages/security/index.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "security",
                ],
                "title": "Security",
                "type": "page",
                "urlSlug": "security",
              },
              {
                "description": undefined,
                "id": "pages/billing.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "billing",
                ],
                "title": "Billing",
                "type": "page",
                "urlSlug": "billing",
              },
            ],
            "slug": [
              "docs",
              "introduction",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "introduction",
        ],
        "title": "Introduction",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/uploads/index.mdx",
                "slug": [
                  "docs",
                  "uploading",
                  "uploads",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "uploads",
              },
              {
                "description": undefined,
                "id": "pages/uploading-files/index.mdx",
                "slug": [
                  "docs",
                  "uploading",
                  "uploading-files",
                ],
                "title": "Uploading files",
                "type": "page",
                "urlSlug": "uploading-files",
              },
            ],
            "slug": [
              "docs",
              "uploading",
            ],
            "type": "pageGroup",
          },
          {
            "items": [
              {
                "pages": [
                  {
                    "description": undefined,
                    "id": "pages/file-uploader/index.mdx",
                    "slug": [
                      "docs",
                      "uploading",
                      "file-uploader",
                      "file-uploader",
                    ],
                    "title": "Overview",
                    "type": "page",
                    "urlSlug": "file-uploader",
                  },
                ],
                "slug": [
                  "docs",
                  "uploading",
                  "file-uploader",
                ],
                "type": "pageGroup",
              },
            ],
            "slug": [
              "docs",
              "uploading",
              "file-uploader",
            ],
            "title": "File Uploader",
            "type": "section",
          },
        ],
        "slug": [
          "docs",
          "uploading",
        ],
        "title": "Uploading",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/transformations/image/compression.mdx",
                "slug": [
                  "docs",
                  "optimization",
                  "image-optimization",
                ],
                "title": "Image optimization",
                "type": "page",
                "urlSlug": "image-optimization",
              },
            ],
            "slug": [
              "docs",
              "optimization",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "optimization",
        ],
        "title": "Optimization",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/transformations/image/index.mdx",
                "slug": [
                  "docs",
                  "image-transformations",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "image-transformations",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "image-transformations",
        ],
        "title": "Image transformations",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/delivery/index.mdx",
                "slug": [
                  "docs",
                  "delivery",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "delivery",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "delivery",
        ],
        "title": "Delivery",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/start/file-management.mdx",
                "slug": [
                  "docs",
                  "file-management",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "file-management",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "file-management",
        ],
        "title": "File management",
        "type": "section",
      },
    ],
    "tabs": [
      {
        "icon": "puzzle",
        "slug": [
          "docs",
        ],
        "title": "Guides",
      },
      {
        "icon": "puzzle",
        "slug": [
          "docs",
          "integrations",
        ],
        "title": "Integrations",
      },
      {
        "icon": "puzzle",
        "slug": [
          "api",
        ],
        "title": "API References",
      },
    ],
    "versions": [],
  },
  "type": "found",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs/integrations 1`] = `
{
  "redirect": "/docs/integrations/all-integrations",
  "type": "redirect",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs/introduction 1`] = `
{
  "redirect": "/docs/introduction/intro",
  "type": "redirect",
}
`;

exports[`getNavigationRoot uploadcare gets navigation root for docs/introduction/intro 1`] = `
{
  "found": {
    "currentTabIndex": 0,
    "currentVersionIndex": -1,
    "sidebarNodes": [
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/index.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "intro",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "intro",
              },
              {
                "description": undefined,
                "id": "pages/start/quickstart.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "start",
                  "quickstart",
                ],
                "title": "Quick start",
                "type": "page",
                "urlSlug": "start/quickstart",
              },
              {
                "description": undefined,
                "id": "pages/security/index.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "security",
                ],
                "title": "Security",
                "type": "page",
                "urlSlug": "security",
              },
              {
                "description": undefined,
                "id": "pages/billing.mdx",
                "slug": [
                  "docs",
                  "introduction",
                  "billing",
                ],
                "title": "Billing",
                "type": "page",
                "urlSlug": "billing",
              },
            ],
            "slug": [
              "docs",
              "introduction",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "introduction",
        ],
        "title": "Introduction",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/uploads/index.mdx",
                "slug": [
                  "docs",
                  "uploading",
                  "uploads",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "uploads",
              },
              {
                "description": undefined,
                "id": "pages/uploading-files/index.mdx",
                "slug": [
                  "docs",
                  "uploading",
                  "uploading-files",
                ],
                "title": "Uploading files",
                "type": "page",
                "urlSlug": "uploading-files",
              },
            ],
            "slug": [
              "docs",
              "uploading",
            ],
            "type": "pageGroup",
          },
          {
            "items": [
              {
                "pages": [
                  {
                    "description": undefined,
                    "id": "pages/file-uploader/index.mdx",
                    "slug": [
                      "docs",
                      "uploading",
                      "file-uploader",
                      "file-uploader",
                    ],
                    "title": "Overview",
                    "type": "page",
                    "urlSlug": "file-uploader",
                  },
                ],
                "slug": [
                  "docs",
                  "uploading",
                  "file-uploader",
                ],
                "type": "pageGroup",
              },
            ],
            "slug": [
              "docs",
              "uploading",
              "file-uploader",
            ],
            "title": "File Uploader",
            "type": "section",
          },
        ],
        "slug": [
          "docs",
          "uploading",
        ],
        "title": "Uploading",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/transformations/image/compression.mdx",
                "slug": [
                  "docs",
                  "optimization",
                  "image-optimization",
                ],
                "title": "Image optimization",
                "type": "page",
                "urlSlug": "image-optimization",
              },
            ],
            "slug": [
              "docs",
              "optimization",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "optimization",
        ],
        "title": "Optimization",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/transformations/image/index.mdx",
                "slug": [
                  "docs",
                  "image-transformations",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "image-transformations",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "image-transformations",
        ],
        "title": "Image transformations",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/delivery/index.mdx",
                "slug": [
                  "docs",
                  "delivery",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "delivery",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "delivery",
        ],
        "title": "Delivery",
        "type": "section",
      },
      {
        "items": [
          {
            "pages": [
              {
                "description": undefined,
                "id": "pages/start/file-management.mdx",
                "slug": [
                  "docs",
                  "file-management",
                  "overview",
                ],
                "title": "Overview",
                "type": "page",
                "urlSlug": "overview",
              },
            ],
            "slug": [
              "docs",
              "file-management",
            ],
            "type": "pageGroup",
          },
        ],
        "slug": [
          "docs",
          "file-management",
        ],
        "title": "File management",
        "type": "section",
      },
    ],
    "tabs": [
      {
        "icon": "puzzle",
        "slug": [
          "docs",
        ],
        "title": "Guides",
      },
      {
        "icon": "puzzle",
        "slug": [
          "docs",
          "integrations",
        ],
        "title": "Integrations",
      },
      {
        "icon": "puzzle",
        "slug": [
          "api",
        ],
        "title": "API References",
      },
    ],
    "versions": [],
  },
  "type": "found",
}
`;
